--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-    "rewrites":[
-        {
-            "source":"/(.*)", 
-            "destination":"/api"
-        }
+    "version": 2,
+    "builds": [
+      { "src": "server/index.js", "use": "@vercel/node" },
+      { "src": "src/package.json", "use": "@vercel/static-build" }
+    ],
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/server/index.js" },
+      { "src": "/(.*)", "dest": "/src/build/$1" }
     ]
- }
+  }
+  
